added cors; api call

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,8 +1,8 @@
 {
   "Marvel_APIs": {
     "BaseURL": "http://gateway.marvel.com/v1/public/",
-    "Key": "",
-    "PrivateKey": ""
+    "Key": "8a9da67c929d5fdb032a8a89a91db29a",
+    "PrivateKey": "31dfa247f185c7a513c84081f954e1c8ca33858d"
   },
   "Logging": {
     "LogLevel": {
